fix: stable scrollbar

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -6,6 +6,12 @@
 
 @custom-variant dark (&:where(.dark, .dark *));
 
+@layer base {
+  html {
+    scrollbar-gutter: stable;
+  }
+}
+
 @theme {
   --text-xs: 0.8125rem;
   --text-xs--line-height: 1.5rem;
